商品分类后台管理完成

--- a/Tmall_Back/src/main/resources/application.properties
+++ b/Tmall_Back/src/main/resources/application.properties
@@ -25,4 +25,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 #dubbo消费者配置
 dubbo.application.name=tmall_backstage
 dubbo.registry.address=zookeeper://47.112.22.169:2181
+#序列化协议
+dubbo.protocol.serialization=kryo
 
+
+#图片上传路径
+Image.uploadSrc=D:/IDEA/WorkSpace/Tmall_SpringBoot/Tmall_Back/src/main/resources/static/img/category
