--- a/Tmall_Service/src/main/resources/application.properties
+++ b/Tmall_Service/src/main/resources/application.properties
@@ -19,4 +19,6 @@ dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 #若为消费者,则不检查提供者启动
 dubbo.consumer.check=false
+#序列化协议
+dubbo.protocol.serialization=kryo
 
