--- a/Tmall_Service/pom.xml
+++ b/Tmall_Service/pom.xml
@@ -70,6 +70,21 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+
+        <!--使用kryo序列化传输-->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>0.41</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
