天猫后台管理全部完成

--- a/Tmall_Back/src/main/resources/application.properties
+++ b/Tmall_Back/src/main/resources/application.properties
@@ -27,7 +27,12 @@ dubbo.application.name=tmall_backstage
 dubbo.registry.address=zookeeper://47.112.22.169:2181
 #序列化协议
 dubbo.protocol.serialization=kryo
+#等待时间延长点
+dubbo.consumer.timeout=10000
+
 
 
 #图片上传路径
 Image.uploadSrc=D:/IDEA/WorkSpace/Tmall_SpringBoot/Tmall_Back/src/main/resources/static/img/category
+#产品图片上传路径
+ProductImage.uploadSrc=D:/IDEA/WorkSpace/Tmall_SpringBoot/Tmall_Back/src/main/resources/static/img/
