--- a/Tmall_POJO/pom.xml
+++ b/Tmall_POJO/pom.xml
@@ -31,6 +31,13 @@
             <version>2.9.8</version>
         </dependency>
 
+
+        <!-- elastic search -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
     </dependencies>
 
 
