--- a/Tmall_Service/src/main/resources/application.properties
+++ b/Tmall_Service/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.hikari.username=root
 spring.datasource.hikari.password=123456
 #表结构自动生成策略
 spring.jpa.hibernate.ddl-auto=none
+#JPA字段映射策略,字段和属性一模一样
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #配置dubbo注册中心管理界面,接口名
 dubbo.application.name=tmall_service
@@ -21,4 +23,6 @@ dubbo.protocol.port=-1
 dubbo.consumer.check=false
 #序列化协议
 dubbo.protocol.serialization=kryo
+#设置超时时间
+dubbo.provider.timeout=1000
 
